Convert and polish running sparkling water